--- a/DataAnalysis.Rmd
+++ b/DataAnalysis.Rmd
@@ -14,34 +14,39 @@ library(tidyverse)
 ## Carga de datos
 
 ```{r}
-#probe=read_csv("data/probe.txt")
+
 aux=read_tsv("data/combined_data_1.txt",col_names=FALSE,n_max =10000)# leo 10^4 lo leo con tabulador para que lea una varable
-aux=aux%>% mutate(fila=row_number())
-filas=grep(":",aux$X1)
-filas_ID= aux %>% filter( fila %in% filas )
+aux=aux%>% mutate(fila=row_number()) #Crea una columna nueva con el número de la observación.
+filas=grep(":",aux$X1) #Obtenemos las posiciones de la fila de las películas
+filas_ID= aux %>% filter( fila %in% filas ) #tabla, donde por cada id de película, nos dice en qué fila está
 IDs=unique(filas_ID$X1)
 reps=diff(c(filas_ID$fila,max(aux$fila)+1))
 length(reps)
 dim(aux)
 sum(reps)
-combined_data_1=aux %>% mutate(ID1=rep(filas_ID$X1,times=reps)) %>% filter(!(fila %in% filas) ) %>% filter(ID1==ID1[length(IDs)])
+#combined_data_1=aux %>% mutate(ID1=rep(filas_ID$X1,times=reps)) %>% filter(!(fila %in% filas) ) %>% filter(ID1==ID1[length(IDs)])
+combined_data_1=aux %>% mutate(ID1=rep(filas_ID$X1,times=reps)) %>% filter(!(fila %in% filas) ) 
 # filtro el último pues no sé si lo he leído entero y las entradas 1:
-
-
-
-
-
-```
-
-
-
-Ahora arreglo la variable X1
-
-
-```{r}
 combined_data_1= combined_data_1 %>% separate(X1,into=c("ID_film","Score","data"),sep=",")
 rm(aux,filas,filas_ID,IDs,reps)
+
+combined_data_1 <- combined_data_1[, c(4, 5, 1, 2, 3)]
+
+combined_data_1 = combined_data_1 %>% 
+  rename(
+    Idx = fila,
+    MovieID = ID1,
+    CustomerID = ID_film,
+    Rating = Score,
+    Date = data
+    )
+
+combined_data_1$MovieID = unlist(strsplit(combined_data_1$MovieID , split=':', fixed=FALSE))
+
 ```
+
+
+
 Visualizo la tabla
 
 ```{r}
