--- a/DataAnalysis.Rmd
+++ b/DataAnalysis.Rmd
@@ -1,8 +1,10 @@
 ---
-title: "Netflix"
-author: "Ricardo"
+title: 'Análisis de datos: Netfliz Prize Program'
+author: "Laura Basalo Tur, Camila Pérez"
 date: "20/11/2020"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -11,41 +13,63 @@ library(tidyverse)
 ```
 
 
-## Carga de datos
+#Introducción
+
+TODO: Comentar...
+
+
+#Carga de datos
+
+TODO: Comentar...
 
 ```{r}
+rm(list=ls())
+cat("\014") ## limpia la pantalla del R
 
-aux=read_tsv("data/combined_data_1.txt",col_names=FALSE,n_max =300000)# leo 10^4 lo leo con tabulador para que lea una varable
-aux=aux%>% mutate(fila=row_number()) #Crea una columna nueva con el número de la observación.
-filas=grep(":",aux$X1) #Obtenemos las posiciones de la fila de las películas
-filas_ID= aux %>% filter( fila %in% filas ) #tabla, donde por cada id de película, nos dice en qué fila está
-IDs=unique(filas_ID$X1)
-reps=diff(c(filas_ID$fila,max(aux$fila)+1))
-length(reps)
-dim(aux)
-sum(reps)
-#combined_data_1=aux %>% mutate(ID1=rep(filas_ID$X1,times=reps)) %>% filter(!(fila %in% filas) ) %>% filter(ID1==ID1[length(IDs)])
-combined_data_1=aux %>% mutate(ID1=rep(filas_ID$X1,times=reps)) %>% filter(!(fila %in% filas) ) 
-# filtro el último pues no sé si lo he leído entero y las entradas 1:
-combined_data_1= combined_data_1 %>% separate(X1,into=c("ID_film","Score","data"),sep=",")
-rm(aux,filas,filas_ID,IDs,reps)
+#Se importan 'n' observaciones del conjunto de datos 'Netflix Prize data'
+n = 10000
+dataframe = read_tsv("data/combined_data_1.txt", col_names=FALSE, n_max = n)
 
-combined_data_1 <- combined_data_1[, c(4, 5, 1, 2, 3)]
+#Se asigna una posición a cada observación para posteriormente indicar el id de película de cada una de ellas
+dataframe = dataframe %>% 
+            mutate(row=row_number()) 
+rows = grep(":", dataframe$X1) 
+rows_ID = dataframe %>% 
+         filter( row %in% rows ) 
+IDs = unique(rows_ID$X1)
+reps = diff(c(rows_ID$row,max(dataframe$row)+1))
 
-combined_data_1 = combined_data_1 %>% 
-  rename(
-    Idx = fila,
-    MovieID = ID1,
-    CustomerID = ID_film,
-    Rating = Score,
-    Date = data
-    )
+df = dataframe %>% 
+     mutate(ID1 = rep(rows_ID$X1,times= reps)) %>% 
+     filter(!(row %in% rows_ID))
 
-combined_data_1$MovieID = unlist(strsplit(combined_data_1$MovieID , split=':', fixed=FALSE))
+#Se definen las columnas del dataframe
+df = df %>% 
+     separate(X1,into = c("ID_film","Score","Data"), sep = ",") %>%
+     separate(Data,into = c("Year","Month","Day"), sep = "-") %>%
+     na.omit(df) %>%
+     mutate(row=row_number())
 
-aux_movie=read_csv("data/movie_titles.csv",col_names=FALSE,n_max =100)# leo 10^4 lo leo con tabulador para que lea una varable
+#Se eliminan las variables auxiliares
+rm(dataframe,rows,rows_ID,IDs,reps)
+
+#Se ordenan las posiciones de las columnas y se indican su nuevo nombre
+df = df[, c(6, 7, 1, 2, 3,4,5)]
+df = df %>% 
+     rename(
+      MovieID = ID1,
+      CustomerID = ID_film,
+      Rating = Score,
+      Idx = row
+     )
+
+#Se elimina el caracter ':' de la columna del MovieID
+df$MovieID = unlist(strsplit(df$MovieID , split = ':', fixed=FALSE))
 
 
+#Se importa el dataframe de los datos de las películas
+n_mov = 10
+df_movies = read_csv("data/movie_titles.csv", col_names = FALSE, n_max = n_mov)
 ```
 
 
@@ -53,6 +77,6 @@ aux_movie=read_csv("data/movie_titles.csv",col_names=FALSE,n_max =100)# leo 10^4
 Visualizo la tabla
 
 ```{r}
-knitr::kable(combined_data_1)
+knitr::kable(df)
 ```
 
